# MinaProd

./: .coverage  .coveragerc  .dockerignore  .env.example  .env.staging  .gitignore  .lighthouserc.json  .mina_index_views_backup_20250925_231432.html  .pre-commit-config.yaml  .replit  .replit.bak_20251022_213918  .secrets.baseline  COMPLETE_DATA_PERSISTENCE_FIX.md  COMPREHENSIVE_ANALYSIS_REPORT.md  COMPREHENSIVE_IMPROVEMENT_PLAN.md  COMPREHENSIVE_TEST_REPORT.md  CRITICAL_ANALYSIS_CROWN_PLUS_GAP.md  CRITICAL_EVENT_MAPPING_ANALYSIS.md  CROWN45_TASKS_TEST_REPORT.md  CROWN_PLUS_GAP_ANALYSIS.md  DATABASE_PERSISTENCE_FIX.md  DATA_PERSISTENCE_FIX_SUMMARY.md  Dockerfile  EMERGENCY_RECONSTRUCTION_PLAN.md  FINAL_VERIFICATION_REPORT.md  FRONTEND_UI_UX_AUDIT.md  GOOGLE_QUALITY_RECONSTRUCTION.md  GOOGLE_RECORDER_BENCHMARK_ROADMAP.md  INDUSTRY_STANDARDS_ROADMAP.md  LICENSE  MINA_CODEBASE_ANALYSIS_REPORT.md  MINA_COMPLETE_ROADMAP.md  MINA_IMPROVEMENT_PLAN.md  MINA_IMPROVEMENT_ROADMAP.md  Makefile  PHASES_4-8_IMPLEMENTATION_PLAN.md  POST_TRANSCRIPTION_ARCHITECTURE_AUDIT.md  PRODUCTION_READINESS_AUDIT.md  PRODUCTION_READINESS_ROADMAP.md  Procfile  (+166 more)
.mina_addons_20250925_224231/: __init__.py
.mina_addons_20250925_224347/: __init__.py  auth.py  config.py  mina.api.js  uploads.py
.mina_jsflags_20250926_083833/: accessibility_enhancements.js.bak  audio_chunk_handler.js.bak  biometric_audio_analysis.js.bak  comprehensive_performance_monitor.js.bak  comprehensive_testing_client.js.bak  critical_fixes_integration.js.bak  enhanced_websocket_client.js.bak  fix_pack_3_qa_pipeline_complete.js.bak  fixed_transcription.js.bak  interim_transcription.js.bak  mobile_optimization.js.bak  pipeline_diagnostics.js.bak  pipeline_performance_monitor.js.bak  predictive_performance_client.js.bak  professional_recorder.js.bak  quantum_optimization.js.bak  robustness_enhancements.js.bak  streaming_audio_client.js.bak  streaming_integration.js.bak  toast_notifications.js.bak  transcript_display_fix.js.bak  unified_enhancement_integration.js.bak  vad_processor_advanced.js.bak
.mina_wire_20250925_220543/: app.py.bak
archived_tests/: test_100_percent_effectiveness.py  test_comprehensive_pipeline.py  test_production_standalone.py  test_recording_pipeline.py  test_transcription.py
attached_assets/: AUD-20250808-WA0001_1756226942159.opus  Pasted--CROWN-TARGET-STATE-MINA-FEATURE-SPECIFICATION-2025-STANDARD-Product-Experience-Real-1761346916644_1761346916652.txt  Pasted--CROWN-TARGET-STATE-MINA-FEATURE-SPECIFICATION-2025-STANDARD-Product-Experience-Real-1761379971671_1761379971672.txt  Pasted--CROWN-TARGET-STATE-MINA-FEATURE-SPECIFICATION-2025-STANDARD-Product-Experience-Real-1761380599344_1761380599345.txt  Pasted--CTO-Verify-Flask-routes-and-wire-API-blueprints-health-endpoints-if-missing-set-euo-pi-1758837874506_1758837874507.txt  Pasted--Mina-v10-CTO-Discovery-Optional-Auto-Fix-Script-Paste-this-whole--1758836958541_1758836958542.txt  Pasted--Think-of-this-as-the-north-star-design-vision-for-Mina-smart-methodical-complete--1759023555337_1759023555339.txt  Pasted--doctype-html-html-lang-en-class-dark-head-meta-charset-utf-8-meta-name-viewp-1758877586308_1758877586310.txt  Pasted--system-performance-metrics-metric-end-to-end-latency--1756238244316_1756238244317.txt  Pasted-Absolutely-I-m-building-on-your-v9-baseline-no-duplication-no-regressions-and-switching-to-real--1758877210148_1758877210150.txt  Pasted-Awesome-here-s-the-Mina-New-User-Handbook-a-single-crystal-clear-step-by-step-guide-that-explai-1759025899265_1759025899267.txt  Pasted-CROWN-TARGET-STATE-MINA-FEATURE-SPECIFICATION-2025-STANDARD-Product-Experience-Real-Time-Record-1761348482352_1761348482353.txt  Pasted-Can-we-run-a-very-thorough-Discovery-and-Analysis-across-our-current-implementation-in-regards-to-th-1761688012130_1761688012132.txt  Pasted-Chin-got-it-If-no-interim-shows-during-recording-and-no-final-after-stop-we-re-in-wiring-broken-1756215973649_1756215973650.txt  Pasted-Got-it-and-thanks-for-the-screenshots-Two-quick-points-up-front-1-I-can-t-read-the-new-MinaIns-1758841977683_1758841977688.txt  live_transcription_api_working_1758996059201.py  mina_landing_page_1758964189968.html  (+5 more)
config/: backup_retention.conf
(+1042 files in other folders)
